--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,10 @@
     "framer-motion": "^12.6.1",
     "lucide-react": "^0.483.0",
     "next-themes": "^0.4.6",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-quilljs": "^2.0.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
     "sonner": "^2.0.1",
