--- a/client/package.json
+++ b/client/package.json
@@ -26,12 +26,13 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.6.1",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.483.0",
     "next-themes": "^0.4.6",
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
     "react-quilljs": "^2.0.5",
     "react-redux": "^9.2.0",
