--- a/client/package.json
+++ b/client/package.json
@@ -37,7 +37,9 @@
     "react-quilljs": "^2.0.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
+    "react-slick": "^0.30.3",
     "recharts": "^2.15.2",
+    "slick-carousel": "^1.8.1",
     "sonner": "^2.0.1",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
