--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.483.0",
     "next-themes": "^0.4.6",
