--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+     "send": "node Database/SendData.js"
   },
   "keywords": [],
   "author": "",
@@ -18,11 +19,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.0",
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
+    "path": "^0.12.7",
     "razorpay": "^2.9.6",
-    "stripe": "^18.0.0"
+    "stripe": "^18.0.0",
+    "winston": "^3.17.0"
   }
 }
