--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "^7.4.0",
     "react-slick": "^0.30.3",
     "recharts": "^2.15.2",
+    "server": "file:..",
     "slick-carousel": "^1.8.1",
     "sonner": "^2.0.1",
     "swiper": "^11.2.6",
