--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "send": "node Database/SendData.js"
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js",
+    "send": "node Database/SendData.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
@@ -24,11 +25,13 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.0",
     "multer": "^1.4.5-lts.2",
-    "nodemon": "^3.1.9",
     "path": "^0.12.7",
     "razorpay": "^2.9.6",
     "stripe": "^18.0.0",
     "url": "^0.11.4",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
