--- a/client/package.json
+++ b/client/package.json
@@ -35,9 +35,9 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
-    "react-quilljs": "^2.0.5",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.4.0",
+    "react-router-dom": "^7.6.0",
     "react-slick": "^0.30.3",
     "recharts": "^2.15.2",
     "server": "file:..",
