--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
     "react-quill": "^2.0.0",
+    "react-quilljs": "^2.0.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "react-slick": "^0.30.3",
